--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.24</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
