--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/dog_adoption
 spring.datasource.username=root
 spring.datasource.password=
+
+#SERCURITY
+spring.security.user.name= abc
+spring.security.user.password= pass
